# simplex-framework

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
modules/application/: CMakeLists.txt
modules/application/include/Simplex/: Application.h
modules/application/src/: Application.cpp
modules/application/tests/src/: Application_Tests.cpp
modules/editor/: CMakeLists.txt
modules/editor/include/Simplex/: Editor.h
modules/editor/include/Simplex/Editor/: Subsystem.h  UI.h  Widgets.h
modules/editor/include/Simplex/Editor/UI/: ImGuiGLFW.h  Widget.h
modules/editor/src/: ImGuiGLFW.cpp  Subsystem.cpp
modules/editor/tests/src/: MockWidget.h  Subsystem_Tests.cpp
modules/graphics/: CMakeLists.txt
modules/graphics/include/Simplex/: Graphics.h
modules/graphics/include/Simplex/Graphics/: Adaptee.h  Adapter.h  Subsystem.h
modules/graphics/src/: Adapter.cpp  Subsystem.cpp
modules/graphics/tests/src/: GraphicsAdapter_Tests.cpp  Subsystem_Tests.cpp
modules/support/: CMakeLists.txt
modules/support/include/Simplex/: Support.h
modules/support/include/Simplex/Support/: Adaptee.h  Adapter.h  Allocator.h  Assert.h  DoublyLinkedList.h  File.h  Globals.h  LinearAllocator.h  LinkedListAllocator.h  PointerMath.h  PoolAllocator.h  ProxyAllocator.h  StackAllocator.h  Subsystem.h  TypeDefs.h
modules/support/src/: Adapter.cpp  Allocator.cpp  DoublyLinkedList.cpp  File.cpp  Globals.cpp  LinearAllocator.cpp  LinkedListAllocator.cpp  PoolAllocator.cpp  ProxyAllocator.cpp  StackAllocator.cpp  TypeDefs.cpp
modules/support/tests/src/: Adapter_Tests.cpp  Allocator_Tests.cpp  DoublyLinkedList_Tests.cpp  File_Tests.cpp  Globals_Test.cpp  LinearAllocator_Tests.cpp  LinkedListAllocator_Tests.cpp  MockStruct.h  PoolAllocator_Tests.cpp  ProxyAllocator_Tests.cpp  StackAllocator_Tests.cpp  Subsystem_Tests.cpp  TypeDefs_Tests.cpp
modules/testing/: CMakeLists.txt
modules/testing/include/Simplex/: Testing.h
modules/testing/include/Simplex/Testing/: Runner.h
modules/testing/src/: Runner.cpp  RunnerMain.cpp
modules/ui/: CMakeLists.txt
modules/ui/include/Simplex/: UI.h
modules/ui/include/Simplex/UI/: ImGuiSDL.h
modules/ui/src/: ImGuiSDL.cpp
